fixed some layout issues

--- a/client/src/stylesheets/alignments.css
+++ b/client/src/stylesheets/alignments.css
@@ -126,6 +126,14 @@
   padding-left: 20px;
 }
 
+.pr-1 {
+  padding-right: 10px;
+}
+
+.pr-2 {
+  padding-right: 20px;
+}
+
 .mt-1 {
   margin-top: 10px;
 }
